--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ install:
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
-  - conda update -q conda
+  - conda update -y -q conda
   - conda info -a
-  - conda install -q conda-build anaconda-client
+  - conda install -y -q conda-build anaconda-client
   - conda config --set always_yes yes --set changeps1 no
   - conda config --add channels conda-forge
   - conda config --add channels programfan
