--- a/conda.recipe/compiledb/meta.yaml
+++ b/conda.recipe/compiledb/meta.yaml
@@ -1,5 +1,5 @@
-{% set name = "fprettify" %}
-{% set version = "0.3.3" %}
+{% set name = "compiledb" %}
+{% set version = "0.9.8" %}
 
 package:
   name: "{{ name|lower }}"
@@ -7,13 +7,13 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 0b68d8e85ddb49be8e1580f6de4ada4dc65b71e11fea611eecd77f3154868154
+  sha256: ded1e9f69c20b62ddc761900bbd48faa9da21b77e4301376515ee1f7ed362a06
 
 build:
   number: 0
   noarch: python
   entry_points:
-    - fprettify = fprettify:run
+    - compiledb=compiledb.cli:cli
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv "
 
 requirements:
@@ -21,20 +21,26 @@ requirements:
     - pip
     - python
   run:
+    - bashlex
+    - click
     - python
 
 test:
   imports:
-    - fprettify
+    - compiledb
+    - compiledb.commands
   commands:
-    - fprettify --help
+    - compiledb --help
 
 about:
-  home: https://github.com/pseewald/fprettify
+  home: https://github.com/nickdiego/compiledb-generator
   license: GNU General Public v3 (GPLv3)
   license_family: GPL3
-  summary: auto-formatter for modern fortran source code
+  license_file: 
+  summary: Tool for generating Clang JSON Compilation Database files for make-based build systems.
+  doc_url: 
+  dev_url: 
 
 extra:
   recipe-maintainers:
-    - programfan
+    - your-github-id-here
