Fix fortran-language-server recipe

--- a/conda.recipe/fortran-language-server/meta.yaml
+++ b/conda.recipe/fortran-language-server/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 0
-  noarch: : python
+  noarch: python
   entry_points:
     - fortls = fortls.__init__:main
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv "
