--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ os:
   - osx
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      sudo apt-get update
+      sudo apt-get update;
     fi
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
