--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: python
-python:
-  # We don't actually use the Travis Python, but this keeps it organized.
-  - "2.7"
-  - "3.6"
-os:
-  - linux
-  - osx
+matrix:
+  include:
+    - os: linux
+      python: 2.7
+      env: CONDA_ENV=python2
+    - os: linux
+      python: 3.6
+      env: CONDA_ENV=python3
+    - os: osx
+      language: generic
+      env: CONDA_ENV=python2
+    - os: osx
+      language: generic
+      env: CONDA_ENV=python3
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get update;
@@ -13,13 +20,13 @@ install:
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      if [[ "$CONDA_ENV" == "python2" ]]; then
         wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
       else
         wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       fi
     else
-      if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      if [[ "$CONDA_ENV" == "python2" ]]; then
         wget https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -O miniconda.sh;
       else
         wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh;
