--- a/conda.recipe/tmuxp/meta.yaml
+++ b/conda.recipe/tmuxp/meta.yaml
@@ -18,17 +18,17 @@ build:
 
 requirements:
   host:
-    - click >=7<8
+    - click >=7,<8
     - colorama >=0.3.9
     - kaptan >=0.5.10
-    - libtmux >=0.8<0.9
+    - libtmux >=0.8,<0.9
     - pip
     - python
   run:
-    - click >=7<8
+    - click >=7,<8
     - colorama >=0.3.9
     - kaptan >=0.5.10
-    - libtmux >=0.8<0.9
+    - libtmux >=0.8,<0.9
     - python
 
 test:
