--- a/conda.recipe/plotlylab/meta.yaml
+++ b/conda.recipe/plotlylab/meta.yaml
@@ -9,7 +9,7 @@ source:
   sha256: 570844d99886aa74e0e4e658cf6050798a384de7483ad40765f302f0ecde0ff2
 
 build:
-  number: 0
+  number: 1
   noarch: python
   entry_points:
     - plotly-lab = plotlylab.labapp:main
@@ -25,6 +25,7 @@ requirements:
     - jupyterlab >=2.2
     - ipywidgets
     - plotly >=4.9
+    - jupyter-dash 0.3.0
 
 about:
   home: https://github.com/plotly/plotlylab
